Second HTML assignment

--- a/root/assets/css/styles.css
+++ b/root/assets/css/styles.css
@@ -1,12 +1,27 @@
-body {background-color: #C0C0C0;
-		margin: 0 auto;
-		text-align: left;
-		font-family: "Times New Roman";
+
+div {background-color: lightgrey;
+	}
+nav {background-color: #805500;
+	}
+
+
+h1 {color: red;
+	font-family: "Times New Roman";
+	font-size:300%;}
+
+h3 {color: red;
+	text-align: center;
+	font-family: "Times New Roman";
+	font-size: 100%;}
+
+p {color: darkgreen; font-size: 120%; text-align: left; }
+
+img {max-width:100%; height: auto;}
+
+#footer {
+    clear: both;
+    position: relative;
+    z-index: 10;
+    height: 3em;
+    margin-top: -3em;
 }
-
-
-h1 { color: #008000;
-	font-family: papyrus;
-	font-size: 300%;}
-
-img {max-width: 50%; height: auto;}
